FIX: adequate contrast in rockstar-speakers block

--- a/_sass/partials/_helper.scss
+++ b/_sass/partials/_helper.scss
@@ -5,7 +5,7 @@
 }
 .bordered {
   display: inline-block;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 1);
   border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 0;
   &.dark-border {
@@ -133,4 +133,7 @@
 }
 .reset-padding {
   padding: 0;
+}
+.darker-background {
+  background: rgba(37, 32, 31, 0.8);
 }
